# Full-Stack-Django

./: .gitignore  README.md  pyproject.toml
mysite/: build.sh
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: forms.py  models.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html  name.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: admin.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
mysite/templates/admin/: base.html
