[tool.poetry]
name = "full-stack-django"
version = "0.1.0"
description = ""
authors = ["Israel Macedo da Silva <raelmacedodasilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "*"
dj-database-url = "*"
psycopg2-binary = "*"
whitenoise = {version = "*", extras = ["brotli"]}
gunicorn = "*"


[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
